[tool.poetry]
name = "simple_retriever"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twitterapi = "^2.5.11"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
