[project]
name = "twitter_simple"
version = "0.1.0"
description = ""
authors = [
    {name = "hjmr", email = "2620990+hjmr@users.noreply.github.com"},
]
dependencies = [
    "twitterapi~=2.7",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pylint~=2.11",
    "black<22,>=21.9b0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
